--- a/vignettes/LandSCENT.Rmd
+++ b/vignettes/LandSCENT.Rmd
@@ -132,7 +132,7 @@ sizeFactors(example.sce) <- librarySizeFactors(example.sce)
 
 Scaling normalization is then used to remove cell-specific biases, e.g. coverage or capture efficiency. Log-transformed normalized expression values can be simply computed with `normalise` function.
 
-**Importantly**, we need to add an offset value of 1.1 before log-transformation. The offset is added in order to ensure that the minimum value after log-transformation would not be 0, but a nonzero value (typically log~2~1.1 ≈ 0.13). We do not want zeroes in our final matrix since the computation of signaling entropy rate involves ratios of gene expression values and zeros in the denominator are undefined.
+**Importantly**, we need to add an offset value of 1.1 before log-transformation. The offset is added in order to ensure that the minimum value after log-transformation would not be 0, but a nonzero value (typically log~2~1.1 \approx 0.13). We do not want zeroes in our final matrix since the computation of signaling entropy rate involves ratios of gene expression values and zeros in the denominator are undefined.
 
 ```{r normalization, eval=TRUE, echo=TRUE, message=FALSE, warning=FALSE}
 example.sce <- normalise(example.sce, log_exprs_offset = 1.1)
@@ -300,7 +300,7 @@ The horizon lines of these density maps decrease from left to right, which indic
 LandSR.o <- Plot_LandSR(potencyInfer.o, reducedMatrix = tsne.o, reduceDim = FALSE, colpersp = NULL, colimage = NULL, bty = "f", PDF = FALSE)
 ```
 
-The output list *LandSR.o* will store the tSNE cluster result for you. you can easily access it with
+The output list *LandSR.o* will store the tSNE cluster result. you can easily access it with
 
 ```{r tSNE matrix , eval=FALSE, echo=TRUE, message=FALSE, warning=FALSE}
 LandSR.o$tSNE.m
@@ -318,7 +318,7 @@ We also provide arguments for you to choose whether to do dimension reduction in
 CellSR.o <- Plot_CellSR(potencyInfer.o, reducedMatrix = tsne.o, reduceDim = FALSE, num_grid = 35, theta = 40, colpersp = NULL, colimage = NULL, bty = "f", PDF = FALSE)
 ```
 
-The output list *CellSR.o* will also store the tSNE cluster result for you, in *CellSR.o$tSNE.m*.
+The output list *CellSR.o* will also store the tSNE cluster result, in *CellSR.o$tSNE.m*.
 
 ### One Note for these two plot functions
 
